<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ForgotPasswordFragment"
    android:orientation="vertical"
    android:background="@color/grey">

    <TextView
        android:id="@+id/page_header"
        android:layout_width="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/forgot_passowrd_header"
        style="@style/login_text_style"
        android:textSize="40sp"
        android:layout_marginTop="150dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/page_detail"
        android:layout_width="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/forgot_password_instruction"
        style="@style/login_text_style"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/school_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/school_id_label"
        style="@style/login_text_style"/>

    <EditText
        android:id="@+id/school_id_f"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_edit_text"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/grey"
        android:textCursorDrawable="@color/orange"
        android:textColorHighlight="@color/orange"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
    <TextView
        android:id="@+id/email_label_f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/email_label"
        style="@style/login_text_style"/>

    <EditText
        android:id="@+id/email_f"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_edit_text"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/grey"
        android:textCursorDrawable="@color/orange"
        android:textColorHighlight="@color/orange"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/prev_button_f"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white"
            android:text="@string/prev_button_label"
            android:textColor="@color/grey"
            android:textSize="20sp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_button_f"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white"
            android:text="@string/next_button_label"
            android:textColor="@color/grey"
            android:textSize="20sp"/>
    </LinearLayout>



</LinearLayout>