<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegistrationFragment"
    android:orientation="vertical"
    android:background="@color/grey">


    <TextView
        android:id="@+id/page_header"
        android:layout_width="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/register"
        style="@style/login_text_style"
        android:textSize="40sp"
        android:layout_marginTop="60dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/page_detail"
        android:layout_width="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/registeration_prompt"
        style="@style/login_text_style"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/full_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/full_name_label"
        style="@style/login_text_style"/>

    <EditText
        android:id="@+id/full_name_field_r"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_edit_text"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/grey"
        android:textCursorDrawable="@color/orange"
        android:textColorHighlight="@color/orange"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
    <TextView
        android:id="@+id/school_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/school_id_label"
        style="@style/login_text_style"/>

    <EditText
        android:id="@+id/school_id_r"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_edit_text"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/grey"
        android:textCursorDrawable="@color/orange"
        android:textColorHighlight="@color/orange"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/email_label"
        style="@style/login_text_style"/>

    <EditText
        android:id="@+id/email_field_r"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_edit_text"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/grey"
        android:textCursorDrawable="@color/orange"
        android:textColorHighlight="@color/orange"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/username_label_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/username_label"
        style="@style/login_text_style"/>

    <EditText
        android:id="@+id/username_field_r"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_edit_text"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/grey"
        android:textCursorDrawable="@color/orange"
        android:textColorHighlight="@color/orange"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
    <TextView
        android:id="@+id/password_label_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/password_label"
        style="@style/login_text_style"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_wrapper_r"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/grey"
        app:boxStrokeErrorColor="@color/grey"
        app:boxStrokeColor="@color/grey">

        <EditText
            android:id="@+id/password_field_r"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_below="@+id/password_label"
            android:layout_centerHorizontal="true"
            android:background="@drawable/custom_edit_text"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_marginStart="30dp"
            android:textColor="@color/grey"
            android:textColorHighlight="@color/orange"
            android:textCursorDrawable="@color/orange"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/prev_button_r"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white"
            android:text="@string/prev_button_label"
            android:textColor="@color/grey"
            android:textSize="20sp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_button_r"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white"
            android:text="@string/next_button_label"
            android:textColor="@color/grey"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>