<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment"
    android:background="@color/grey">

    <RelativeLayout
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_login"

            />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/logo"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/anton"
            android:text="@string/login_header"
            android:textColor="@color/white"
            android:textSize="50sp"
            tools:ignore="TextContrastCheck" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/login_header">

        <TextView
            android:id="@+id/username_label"
            style="@style/login_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/email_label" />

        <EditText
            android:id="@+id/email_l"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_below="@+id/username_label"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/custom_edit_text"
            android:drawableStart="@drawable/user_icon"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/grey"
            android:textColorHighlight="@color/orange"
            android:textCursorDrawable="@color/orange"
            android:theme="@style/text_input_layout"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/password_label"
            style="@style/login_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_l"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/password_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_wrapper"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_below="@id/password_label"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:theme="@style/text_input_layout"
            app:boxStrokeColor="@color/grey"
            app:boxStrokeErrorColor="@color/grey"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/grey">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/password_label"
                android:layout_centerHorizontal="true"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/lock_icon"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/grey"
                android:textColorHighlight="@color/orange"
                android:textCursorDrawable="@color/orange"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_below="@id/password_wrapper"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:text="@string/login_button"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/create_account"
            style="@style/login_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_button"
            android:layout_marginStart="48dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="32dp"
            android:text="@string/create_account_button"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/bar"
            style="@style/login_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_button"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/create_account"
            android:text="@string/bar" />

        <TextView
            android:id="@+id/forgot_password"
            style="@style/login_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_button"
            android:layout_marginStart="205dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="32dp"
            android:text="@string/forgot_password_label"
            tools:ignore="TouchTargetSizeCheck" />
    </RelativeLayout>



</RelativeLayout>
